added background color

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Rara's Recipes</title>
 </head>
 
-<body>
+<body style="background-color:pink">
     <h1>Odin Recipes</h1>
     <br>
-    <img src=""
-
+    <img src="./recipes/foodhead.jpeg" 
+    alt="human head made of veggies" 
+    height="600">
+<br>
+<br>
     <a href="./recipes/lasagna.html"
+    style="font-size: 50px;"
     >Lasagna Recipe</a>
     
 </body>
